scrollbar problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,12 +17,37 @@
 }
 
 
-*{
-  -ms-overflow-style: none; /* for Internet Explorer, Edge */
-  scrollbar-width: none; /* for Firefox */
-  overflow-y: scroll; 
+/* -----------------------Scrollbar Styles --------------------- */
+:root::-webkit-scrollbar{
+  display: none;
 }
 
+:root {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+
+
+/* width */
+::-webkit-scrollbar {
+  width: 11px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 4px #80808079; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #075F8F; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00486e; 
+}
 
 
 @media (prefers-color-scheme: dark) {
